[package]
name = "google-signin"
edition = "2021"
version = "0.4.0"
description = "API bindings for Google Sign-In"
authors = ["Kevin Stenerson <kstenerson@developers.wyyerd.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/wyyerd/google-signin-rs"
documentation = "https://docs.rs/google-signin"
keywords = ["google", "signin", "oauth", "oauth2", "api"]
categories = ["api-bindings"]

[dependencies]
bytes = "1.2.1"
cache_control = "0.2.0"
hyper = { version = "0.14.23", features = ["client", "http2"] }
hyper-openssl = "0.9.2"
hyper-tls = "0.5.0"
jsonwebtoken = "8.1.1"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
